<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/idRLFragmentWeatherData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherDataFragment">

    <TextView
        android:id="@+id/idTVCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/city"
        android:textSize="32sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/idTVTimeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVCityName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/time"
        android:textSize="22sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/idTVTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVTimeCity"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/_23"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/idIVIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVTemperature"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/idTVCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idIVIcon"
        android:gravity="center"
        android:text="@string/condition"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/idLLFragmentWeatherData"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/idTVCondition"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTVWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wind_kph"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawableEnd="@drawable/wind"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/idTVPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pressure_hpa"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawableEnd="@drawable/pressure"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <TextView
            android:id="@+id/idTVHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawableEnd="@drawable/humidity"
            tools:ignore="UseCompatTextViewDrawableXml" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idLLFragmentWeatherData"
        android:layout_marginTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/idBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idRVWeather"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#1AFFFFFF"
        android:outlineProvider = "none"
        android:padding="12dp"
        android:text="@string/search_for_other_city"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</RelativeLayout>