<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRLFragmentStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/idTVHalloMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/hallo_back"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/idLLEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVHalloMsg"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idTILCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:hint="@string/enter_city_name"
            android:padding="5dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idEdtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:backgroundTint="#1AFFFFFF"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/idIVSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_search"
            app:tint="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/idTVCurrentCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idLLEdt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/current_city"
        android:textSize="32sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/idTVCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVCurrentCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/idTVCurrentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVCurrentDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/current_temperature"
        android:textSize="24sp"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/idIVCurrentIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVCurrentTemperature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/idTVCurrentWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idIVCurrentIcon"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/wind_kph"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/idBtnGetCurrentWeather"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVCurrentWind"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/get_weather_info_for_your_location"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="12dp"
        android:outlineProvider = "none"
        android:backgroundTint="#1AFFFFFF" />

</RelativeLayout>
